Restore focus styling on panel CTA

--- a/stylesheets/_component.panels.scss
+++ b/stylesheets/_component.panels.scss
@@ -102,6 +102,10 @@
             a:visited {
                 color: $state-color-alt !important;
             }
+
+            a:focus {
+                color: color(black) !important;
+            }
         }
     }
 }
