--- a/stylesheets/_component.modals.scss
+++ b/stylesheets/_component.modals.scss
@@ -353,5 +353,13 @@
         .colorpicker .input-group:not(.has-btn-prepended):not(.has-btn-appended) .form__control:not(:first-child):not(:last-child) {
             @include col-span-width(9, 9);
         }
+
+        // column variations
+        @for $i from 1 through 12 {
+            .form__control-col--#{$i} .control__label + .controls > .form__control:not(.checkbox):not(.radio),
+            .form__control-col--#{$i} .control__label + .controls > .form__control:not(.checkbox):not(.radio) + .select2 {
+                @include col-span-width($i, 12);
+            }
+        }
     }
 }
