--- a/views/lexicon/tabs/modals.html.twig
+++ b/views/lexicon/tabs/modals.html.twig
@@ -1,9 +1,27 @@
 {% extends "@pulsar/pulsar/components/tab.html.twig" %}
 
 {% block tab_content %}
-<p><a data-toggle="modal" href="#myModal" class="btn">Launch Standard Modal</a></p>
-<p><button class="btn" data-toggle="modal" data-target="#myModal" class="btn">Launch Standard Modal via a button</button></p>
+<p><button class="btn" data-toggle="modal" data-target="#modalExample" class="btn">Launch Standard Modal via a button</button></p>
 <p><a data-toggle="modal" href="#myFullScreenModal" class="btn">Launch Full Screen Modal</a></p>
+
+<div class="modal modal__example" id="modalExample" tabindex="-1" role="dialog" aria-modal="true" aria-labelledby="modalExample-title" aria-describedby="modalExample-description">
+    <div class="modal__dialog">
+        <div class="modal__content">
+            <div class="modal__header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h1 class="modal__title" id="modalExample-title">A simple example</h1>
+            </div>
+            <div class="modal__body">
+                <p id="modalExample-description" class="hide">Here goes a short description (a couple of lines) about the modal's purpose, if needed.</p>
+                <p>The modal body might have instructions, a form, or other stuff.</p>
+            </div>
+            <div class="modal__footer">
+                <button type="button" class="btn btn--primary">Save Changes</button>
+                <button type="button" class="btn btn--naked" data-dismiss="modal">Cancel</button>
+            </div>
+        </div><!-- /.modal__content -->
+    </div><!-- /.modal__dialog -->
+</div><!-- /.modal -->
 
 <div class="modal modal__example show" id="modalOne" tabindex="-1" role="dialog" aria-modal="true" aria-labelledby="modalOne-title" aria-describedby="modalOne-description">
     <div class="modal__dialog">
