--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -20,14 +20,16 @@
         </ul>
     </div>
 
-    <div class="nav-secondary t-nav-secondary" id="aria-secondary-nav">
+    <div class="nav-secondary t-nav-secondary nav-flyout" id="aria-secondary-nav">
 
-        <button class="nav-close" data-nav-action="close" tabindex="1">{{ html.icon('remove', { 'label': 'Close expanded menu' }) }}</button>
+        <div class="nav-controls">
+            <button class="nav-controls__close" data-nav-action="close" tabindex="1">{{ html.icon('remove', { 'label': 'Close expanded menu' }) }}</button>
+        </div>
 
         {% if options.data is iterable %}
             {% for options in options.data %}
                 {% if options.items is defined and options.items is iterable %}
-                    <div class="nav-list" data-nav="{{ options.href }}" id="{{ options.label|lower }}">
+                    <div class="nav-list" data-nav="{{ options.href }}" id="{{ options.label|lower }}" aria-labelledby="aria-secondary-nav-heading-{{ options.label|striptags|replace({' ': '-'})|raw }}">
                         <h2 class="nav-item nav-item--header t-nav-header" id="aria-secondary-nav-heading-{{ options.label|striptags|replace({' ': '-'})|raw }}">{{ options.label|raw }}</h2>
 
                         <ul class="nav-items">
@@ -51,11 +53,13 @@
 
     </div>
 
-    <div class="nav-tertiary t-nav-tertiary" id="aria-tertiary-nav">
+    <div class="nav-tertiary t-nav-tertiary nav-flyout" id="aria-tertiary-nav">
 
-        <button class="nav-close" data-nav-action="close" tabindex="1">{{ html.icon('remove', { 'label': 'Close expanded menu' }) }}</button>
+        <div class="nav-controls">
+            <button class="nav-controls__close" data-nav-action="close" tabindex="1">{{ html.icon('remove', { 'label': 'Close expanded menu' }) }}</button>
+        </div>
 
-        <div class="nav-list">
+        <div class="nav-list" aria-labelledby="aria-tertiary-nav-heading">
             <h2 class="nav-item nav-item--header t-nav-header" id="aria-tertiary-nav-heading">More Categories</h2>
             {% set heading_id = 'aria-tertiary-nav-heading' %}
             {% set aria_controls = 'aria-quaternary-nav' %}
@@ -70,17 +74,19 @@
 
     </div>
 
-    <div class="nav-quaternary t-nav-quaternary" id="aria-quaternary-nav">
+    <div class="nav-quaternary t-nav-quaternary nav-flyout" id="aria-quaternary-nav">
 
-        <button class="nav-close-ltr" data-nav-action="close" tabindex="1">{{ html.icon('remove', { 'label': 'Close expanded menu' }) }}</button>
+        <div class="nav-controls">
+            <button class="nav-controls__close-ltr" data-nav-action="close" tabindex="1">{{ html.icon('remove', { 'label': 'Close expanded menu' }) }}</button>
+        </div>
 
            {% if options.data is iterable %}
                {% for options in options.data %}
                    {% if options.items is defined and options.items is iterable %}
 
-                       <div class="nav-list" data-nav="{{ options.href }}">
+                        {% set heading_id = 'aria-quaternary-nav-heading-' ~ options.label|raw %}
+                        <div class="nav-list" data-nav="{{ options.href }}" aria-labelledby="aria-quaternary-nav-heading-{{ options.label|striptags|replace({' ': '-'})|raw }}">
                            <h2 class="nav-item nav-item--header t-nav-header" id="aria-quaternary-nav-heading-{{ options.label|striptags|replace({' ': '-'})|raw }}">{{ options.label|raw }}</h2>
-                           {% set heading_id = 'aria-quaternary-nav-heading-' ~ options.label|raw %}
 
                            <ul class="nav-items">
                                {% for menu_blocks in options.items %}
@@ -94,7 +100,7 @@
                                    {% endif %}
                                {% endfor %}
                            </ul>
-                       </div>
+                        </div>
 
                    {% endif %}
                {% endfor %}
