--- a/stylesheets/_mixin.focus.scss
+++ b/stylesheets/_mixin.focus.scss
@@ -22,6 +22,14 @@
     outline: none;
 }
 
+@mixin pulsar-icon-button-focused {
+    background-color: color(background, focus);
+    border-radius: 0;
+    box-shadow: 0 2px 0 color(black);
+    color: color(black) !important;
+    outline: none;
+}
+
 @mixin pulsar-input-focused {
     border-color: color(black);
     border-radius: 0;
