--- a/stylesheets/_utility.utilities.scss
+++ b/stylesheets/_utility.utilities.scss
@@ -87,6 +87,11 @@
     margin-bottom: 0 !important;
 }
 
+%u-margin-right-small,
+.u-margin-right-small {
+    margin-right: $margin-base / 2 !important;
+}
+
 /**
  * -----------------------------------------------------------------------------
  * Visibility
