--- a/stylesheets/pulsar.scss
+++ b/stylesheets/pulsar.scss
@@ -157,6 +157,7 @@ $fa-css-prefix: 'icon';
 @import 'component.jstree';
 @import 'component.dropzone';
 @import 'component.repeater';
+@import 'component.edit-button';
 
 /* -------------------------------------------------------------------------- *\
 	If you're extending Pulsar and want to include your own layouts/modules etc
