--- a/views/lexicon/tables/form-tables.html.twig
+++ b/views/lexicon/tables/form-tables.html.twig
@@ -114,7 +114,7 @@
                         <th id="default-label">Default</th>
                         <th>Label</th>
                         <th>Value</th>
-                        <td></td>
+                        <td><span class="hide">Actions</span></td>
                     </tr>
                 </thead>
                 <tbody>
@@ -123,7 +123,7 @@
                         <td>my_label</td>
                         <td>my_value</td>
                         <td class="centered">
-                            {{ html.edit_button({ 'placement': 'left' }) }}
+                            {{ html.edit_button({ 'placement': 'left', 'class': 'u-margin-right-small' }) }}
                             {{ html.remove_button({ 'placement': 'right' }) }}
                         </td>
                     </tr>
@@ -132,7 +132,7 @@
                         <td>my_label</td>
                         <td>my_value</td>
                         <td class="centered">
-                            {{ html.edit_button({ 'placement': 'left' }) }}
+                            {{ html.edit_button({ 'placement': 'left', 'class': 'u-margin-right-small' }) }}
                             {{ html.remove_button({ 'placement': 'right' }) }}
                         </td>
                     </tr>
@@ -141,7 +141,7 @@
                         <td>my_label</td>
                         <td>my_value</td>
                         <td class="centered">
-                            {{ html.edit_button({ 'placement': 'left' }) }}
+                            {{ html.edit_button({ 'placement': 'left', 'class': 'u-margin-right-small' }) }}
                             {{ html.remove_button({ 'placement': 'right' }) }}
                         </td>
                     </tr>
