lexicon only - added missing names to fix SI grouping errors

--- a/views/lexicon/forms/all.html.twig
+++ b/views/lexicon/forms/all.html.twig
@@ -126,7 +126,8 @@
     {{
         form.toggle_switch({
             'id': 'guid-' ~ random(),
-            'label': 'Toggle switch'
+            'label': 'Toggle switch',
+            'name': 'all-toggle-example-1'
         })
     }}
 
