Resolve lexicon master switch SI errors

--- a/views/lexicon/patterns/masterswitch/masterswitch-enabled-form-wrapper.html.twig
+++ b/views/lexicon/patterns/masterswitch/masterswitch-enabled-form-wrapper.html.twig
@@ -13,7 +13,8 @@
                 'class': 'masterswitch-control',
                 'label': 'Enable masterswitch content',
                 'id': 'toggle-' ~ random(),
-                'checked': true
+                'checked': true,
+                'name': 'masterswitch-enabled-form-wrapper'
             })
         }}
 
