--- a/views/lexicon/patterns/masterswitch/masterswitch.html.twig
+++ b/views/lexicon/patterns/masterswitch/masterswitch.html.twig
@@ -13,6 +13,7 @@
                 'class': 'masterswitch-control',
                 'label': 'Enable masterswitch content',
                 'id': 'toggle-' ~ random(),
+                'name': 'masterswitch'
             })
         }}
 
