--- a/views/lexicon/base.html.twig
+++ b/views/lexicon/base.html.twig
@@ -98,18 +98,22 @@
                         "href": "/app/app.php/lexicon/patterns/no-results/"
                     },
                     "4.1.7": {
+                        "label": "Piano",
+                        "href": "/app/app.php/lexicon/patterns/piano/"
+                    },
+                    "4.1.8": {
                         "label": "Reporting",
                         "href": "/app/app.php/lexicon/patterns/reporting/"
                     },
-                    "4.1.8": {
+                    "4.1.9": {
                         "label": "Rules",
                         "href": "/app/app.php/lexicon/patterns/rules/"
                     },
-                    "4.1.9": {
+                    "4.1.10": {
                         "label": "Settings panel",
                         "href": "/app/app.php/lexicon/patterns/settings-panel/"
                     },
-                    "4.1.10": {
+                    "4.1.11": {
                         "label": "Table Detail",
                         "href": "/app/app.php/lexicon/patterns/table-detail/"
                     }
