Space form actions with margin rather than whitespace

--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -1011,7 +1011,8 @@ class   | string | A space separated list of class names
 #}
 {% macro end(options) %}
     {% import '@pulsar/pulsar/v2/helpers/util.html.twig' as util %}
-
+    {% spaceless %}
+    
     {% if options.actions is defined %}
         <div{{
             attributes(options
@@ -1027,6 +1028,7 @@ class   | string | A space separated list of class names
         </div>
     {% endif %}
     </form>
+    {% endspaceless %}
 {% endmacro %}
 
 
