--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -297,6 +297,10 @@ fieldset {
     @include respond-min($screen-tablet) {
         @include push-padding(2.87); // magic number to align form actions with form grid
     }
+
+    .btn {
+        margin-right: 4px;
+    }
 }
 
 .form__actions--flush {
