--- a/stylesheets/_component.search.scss
+++ b/stylesheets/_component.search.scss
@@ -2,6 +2,7 @@
     border: 1px solid $input-border;
     border-radius: 4px;
     display: block;
+    flex: 1 1 100%;
     flex-grow: 1;
     height: 32px;
     margin-bottom: 10px;
@@ -10,6 +11,7 @@
 
     @include respond-min($screen-tablet) {
         flex-grow: 0;
+        max-width: 180px;
     }
 }
 
