Make flash container use flexbox to maintain expected layout in IE11

--- a/stylesheets/_component.flash.scss
+++ b/stylesheets/_component.flash.scss
@@ -112,9 +112,9 @@
 
 .flash-container {
     clear: both;
+    flex: 1 1 100%;
     margin: 0 -20px ($line-height-base / 2) -19px;
     z-index: $zindex-flash;
-    width: calc(100% + 40px);
 
     &:empty {
         display: none;
