--- a/stylesheets/_component.modals.scss
+++ b/stylesheets/_component.modals.scss
@@ -230,13 +230,12 @@
 
     .close,
     .download {
-        color: color(gray);
+        color: color(gray) !important;
         font-size: 1.4em;
-        padding: 18px;
         transition: color .1s ease;
 
         &:hover {
-            color: color(jadu-blue);
+            color: color(jadu-blue) !important;
         }
 
         &:focus {
@@ -245,13 +244,30 @@
     }
 
     .close {
+        border-radius: 0;
+        box-shadow: none;
         margin-right: 0;
         margin-top: 0;
+        padding: 17px;
+
+        &:active {
+            background: none;
+            top: 0;
+        }
+
+        &:hover {
+            transform: none;
+
+            &::after {
+                position: relative;
+            }
+        }
     }
 
     .download {
         border-right: 1px solid color(gray, off-white);
         float: right;
+        padding: 18px;
 
         @include ie-lte(9) {
             display: inline-block;
