full page modal fixes

--- a/views/lexicon/tabs/modals.html.twig
+++ b/views/lexicon/tabs/modals.html.twig
@@ -83,7 +83,7 @@
     </div><!-- /.modal__dialog -->
 </div><!-- /.modal -->
 
-<div class="modal modal--full-screen fade" id="myFullScreenModal" tabindex="-1" role="dialog" aria-hidden="true" aria-labelledby="fullModal-title" aria-describedby="fullModal-description">
+<div class="modal modal--full-screen fade" id="myFullScreenModal" tabindex="-1" role="dialog" aria-modal="true" aria-labelledby="fullModal-title" aria-describedby="fullModal-description">
     <div class="modal__dialog">
         <div class="modal__content">
             <div class="modal__header">
@@ -95,10 +95,9 @@
 
                 <div class="modal__controls">
                     {{
-                        html.link({
-                            'href': '#',
+                        html.button({
                             'label': html.icon('times', {
-                                'label': 'Close'
+                                'label': 'Close modal dialog'
                             }),
                             'class': 'close',
                             'data-dismiss': 'modal',
