--- a/views/pulsar/components/tab.html.twig
+++ b/views/pulsar/components/tab.html.twig
@@ -68,7 +68,7 @@
             {% block tab_content %}{% endblock %}
         </div>
         {% if _hasSidebar == true %}
-        <aside class="tab__sidebar" aria-label="{{ sidebar_label|default('additional information') }}">
+        <aside class="tab__sidebar" aria-label="additional information">
             {{ _sidebar|raw }}
         </aside>
         {% endif %}
