a11y updates to rules uis

--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -17,13 +17,15 @@
         }
     }
 
-    .remove__control {
-        border: 0;
-        color: #999 !important;
+    .remove-button {
         position: absolute;
-        text-decoration: none;
-        top: 10px;
-        right: 10px;
+        right: 5px;
+        top: 5px;
+
+        @include respond-min($screen-tablet) {
+            top: 10px;
+            right: 10px;
+        }
     }
 
     [href].conditional-block__link--when {
@@ -37,6 +39,10 @@
 
     [href].conditional-block__link--then {
         color: color(success, dark);
+    }
+
+    .rule-block__control {
+        vertical-align: top;
     }
 }
 
@@ -172,15 +178,32 @@
 
 .conditional-block--flush {
     margin: 24px 0 0 58px;
+    position: relative;
 
     @include respond-min($screen-tablet) {
         margin: 24px 0 0 68px;
     }
+
+    &::after {
+        color: #dedede;
+        content: '\f061';
+        font-family: 'FontAwesome';
+        font-size: 19px;
+        left: 0;
+        position: absolute;
+        top: 7px;
+    }
+
+    .btn {
+        margin-left: 25px;
+    }
+
 }
 
 .conditional-block--indented {
     margin: 0 0 24px 75px;
     padding-top: 14px;
+    position: relative;
 
     @include respond-min($screen-tablet) {
         margin: 0 0 14px 80px;
@@ -189,12 +212,26 @@
     &::before {
         background: #dedede;
         content: '';
-        height: 26px;
+        height: 30px;
         left: 0;
         position: absolute;
         top: 0;
         width: 4px;
         z-index: 1;
+    }
+
+    .btn {
+        margin-left: 25px;
+    }
+
+    &::after {
+        color: #dedede;
+        content: '\f061';
+        font-family: 'FontAwesome';
+        font-size: 19px;
+        left: 0;
+        position: absolute;
+        top: 17px;
     }
 }
 
@@ -249,7 +286,8 @@ td.table__form .rules + .form__group:last-of-type {
     }
 }
 
-.rules__step.has-error {
+.rules__step.has-error,
+.rule-block-wrapper.has-error {
     .rule-block__header {
         background-color: $state-danger-bg;
         box-shadow: inset 4px 0 0 0 color(danger);
@@ -257,14 +295,6 @@ td.table__form .rules + .form__group:last-of-type {
 
     .rule-block__heading {
         color: color(danger, dark);
-    }
-
-    .help-block {
-        margin: 0 0 0 1em;
-    }
-
-    .help-block:last-of-type {
-        margin-bottom: .6em;
     }
 
     .is-error {
@@ -393,6 +423,10 @@ td.table__form .rules + .form__group:last-of-type {
 
         .btn {
             background-color: lighten($rule-color-or, 25);
+
+            &:focus {
+                background-color: color(background, focus);
+            }
         }
     }
 
@@ -422,6 +456,10 @@ td.table__form .rules + .form__group:last-of-type {
 
         .btn {
             background-color: lighten($rule-color-and, 20);
+
+            &:focus {
+                background-color: color(background, focus);
+            }
         }
     }
 
@@ -448,6 +486,10 @@ td.table__form .rules + .form__group:last-of-type {
             background-color: lighten($rule-color-if, 40);
             margin-left: 30px;
             min-width: 76px;
+
+            &:focus {
+                background-color: color(background, focus);
+            }
         }
     }
 
@@ -493,6 +535,7 @@ td.table__form .rules + .form__group:last-of-type {
     }
 
     .rule-block__heading {
+        font-weight: bold;
         padding: 0;
     }
 
@@ -537,6 +580,14 @@ td.table__form .rules + .form__group:last-of-type {
         .rule-block__header {
             border-top: 0;
         }
+
+        .remove-button i {
+            color: color(white) !important;
+
+            @include respond-min($screen-tablet) {
+                color: color(text) !important;
+            }
+        }
     }
 
     .rule-block--and {
@@ -548,10 +599,6 @@ td.table__form .rules + .form__group:last-of-type {
             background-color: $rule-color-and;
             color: color(black);
         }
-
-        .remove__control {
-            color: color(text);
-        }
     }
 
     .rule-block--or {
@@ -560,6 +607,14 @@ td.table__form .rules + .form__group:last-of-type {
 
         .rule-block__header {
             background-color: $rule-color-or;
+        }
+
+        .remove-button i {
+            color: color(white) !important;
+
+            @include respond-min($screen-tablet) {
+                color: color(text) !important;
+            }
         }
     }
 
@@ -618,6 +673,11 @@ td.table__form .rules + .form__group:last-of-type {
 
     .rule-block__controls {
         margin-top: .5em;
+
+        @include respond-min($screen-tablet) {
+            display: table-cell;
+            padding-top: .5em;
+        }
     }
 
     // Fix alignment when help-blocks are present
@@ -629,18 +689,14 @@ td.table__form .rules + .form__group:last-of-type {
         color: $rule-color-help;
     }
 
-    .remove__control {
-        background: none;
-        border: 0;
-        color: color(white);
-        font-size: $font-size-large;
-        padding: 2px 6px;
+    .remove-button {
         position: absolute;
-        right: 2px;
+        right: 5px;
         top: 5px;
 
         @include respond-min($screen-tablet) {
-            color: color(text);
+            top: 10px;
+            right: 10px;
         }
     }
 }
