--- a/views/lexicon/patterns/rules/event-based.html.twig
+++ b/views/lexicon/patterns/rules/event-based.html.twig
@@ -58,39 +58,47 @@
 {% block tab_content %}
 
     {{
-        html.panel({
-            'class': 'panel--danger',
-            'icon': 'warning-sign',
-            'title': 'Your rule cannot be saved',
-            'body': 'Please correct the highlighted errors in your rule, and try saving again.'
+        form.error_summary({
+            'heading': 'There is a problem',
+            'errors': [
+                {
+                    'label': 'Please choose a user type',
+                    'href': 'select2-select2-with-error'
+                }
+            ]
         })
     }}
 
-    <table class="table datatable table--full" data-select="false">
+    <table class="table datatable table--full" data-select="false" data-overflow="collapse">
+        <caption class="hide">Rules</caption>
         <thead>
             <tr>
-                <td class="table-responsive"></td>
-                <th class="shrink-to-fit centered"><a href="#">Active</a></th>
-                <th><a href="#">Name</a></th>
-                <th><a href="#">Last triggered</a></th>
+                <td><span class="hide">Table controls</span></td>
+                <th data-orderable="false" class="shrink-to-fit centered">Active</th>
+                <th data-orderable="false">Name</th>
+                <th data-orderable="false">Last triggered</th>
             </tr>
         </thead>
         <tbody>
             {% for i in 0..1 %}
             <tr>
                 <td class="table-responsive">
-                    {{ html.button({ 'label': html.icon('plus-sign', { 'label': 'Expand', 'class': 'table-child-toggle' }), 'class': 'btn--naked'}) }}
+                    <button class="table-child-toggle">
+                        {{ html.icon('plus-sign', { 'label': 'Toggle this rows collapsed columns' }) }}
+                    </button>
                 </td>
-                <td class="centered">{{ html.status('active') }}</td>
+                <td class="shrink-to-fit centered">{{ html.status('active') }}</td>
                 <td><a href="#">Create green waste case</a></td>
                 <td>01/02/03 12:34pm</td>
             </tr>
 
             <tr>
                 <td class="table-responsive">
-                    {{ html.button({ 'label': html.icon('plus-sign', { 'label': 'Expand', 'class': 'table-child-toggle' }), 'class': 'btn--naked'}) }}
+                    <button class="table-child-toggle">
+                        {{ html.icon('plus-sign', { 'label': 'Toggle this rows collapsed columns' }) }}
+                    </button>
                 </td>
-                <td class="centered">{{ html.status('inactive') }}</td>
+                <td class="shrink-to-fit centered">{{ html.status('inactive') }}</td>
                 <td><a href="#">Create brown waste case</a></td>
                 <td>01/02/03 12:34pm</td>
             </tr>
@@ -129,6 +137,8 @@
                             {{
                                 rule.block_when({
                                     'removeable': false,
+                                    'show_and': false,
+                                    'show_or': false,
                                     'inputs': [
                                         form.select2({
                                             'id': 'select2-' ~ random(),
@@ -173,7 +183,7 @@
                                         form.select({
                                             'id': 'select-' ~ random(),
                                             'class': 'form__group--small',
-                                            'label': 'Choose',
+                                            'label': 'Choose logic',
                                             'show-label': false,
                                             'options':
                                             [
@@ -190,7 +200,7 @@
                                         form.select2({
                                             'id': 'select2-' ~ random(),
                                             'class': 'form__group--medium',
-                                            'label': 'Choose user type',
+                                            'label': 'Choose value',
                                             'show-label': false,
                                             'options':
                                             [
@@ -211,12 +221,11 @@
                                     ]
                                 })
                             }}
+
                             {{
                                 rule.block_or({
                                     'class': 'rule--indented',
-                                    'error': [
-                                        'Please choose a user type'
-                                    ],
+                                    'error': true,
                                     'inputs': [
                                         form.select2({
                                             'id': 'select2-' ~ random(),
@@ -234,7 +243,7 @@
                                         form.select({
                                             'id': 'select-' ~ random(),
                                             'class': 'form__group--small',
-                                            'label': 'Choose',
+                                            'label': 'Choose logic',
                                             'show-label': false,
                                             'options':
                                             [
@@ -249,10 +258,11 @@
                                             ]
                                         }),
                                         form.select2({
-                                            'id': 'select2-' ~ random(),
+                                            'id': 'select2-select2-with-error',
                                             'class': 'form__group--medium has-error',
-                                            'label': 'Choose user type',
+                                            'label': 'Choose value',
                                             'show-label': false,
+                                            'error': 'Please choose a user type',
                                             'options':
                                             [
                                                 {
