Fix contrast issue with rule remove buttons

--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -19,7 +19,7 @@
 
     .remove__control {
         border: 0;
-        color: #999 !important;
+        color: color(text) !important;
         position: absolute;
         text-decoration: none;
         top: 10px;
