--- a/views/lexicon/patterns/rules/event-based.html.twig
+++ b/views/lexicon/patterns/rules/event-based.html.twig
@@ -107,7 +107,7 @@
         <tfoot>
             <tr>
                 <td class="table__form" colspan="4">
-                    <div id="rule-form-container" class="rules-container">
+                    <div id="rule-form-container-event" class="rules-container">
                         {{
                             form.create()
                         }}
