--- a/views/lexicon/patterns/rules/logic-based.html.twig
+++ b/views/lexicon/patterns/rules/logic-based.html.twig
@@ -57,7 +57,7 @@
 
 {% block tab_content %}
 
-<div id="rule-form-container" class="rules-container rules-container--v2">
+<div id="rule-form-container-logic" class="rules-container rules-container--v2">
 
     <fieldset class="rule-block rule-block--if">
         <legend class="hide">If rule condition</legend>
