Fix select2 placeholder color contrast

--- a/stylesheets/_component.select2.scss
+++ b/stylesheets/_component.select2.scss
@@ -47,6 +47,10 @@
     min-height: 32px;
     user-select: none;
     -webkit-user-select: none;
+
+    .select2-search__field {
+        @include placeholder($input-color-placeholder);
+    }
 }
 
 .select2-container .select2-selection--multiple .select2-selection__rendered {
@@ -188,7 +192,7 @@
 }
 
 .select2-container--default .select2-selection--single .select2-selection__placeholder {
-    color: #999;
+    color: color(text, placeholder)
 }
 
 .select2-container--default .select2-selection__arrow {
@@ -220,6 +224,10 @@
 .select2-container--default.select2-container--disabled .select2-selection--single {
     background-color: #eee;
     cursor: default;
+
+    &:focus {
+        outline: none;
+    }
 }
 
 .select2-container--default.select2-container--disabled .select2-selection--single .select2-selection__clear {
@@ -247,7 +255,7 @@
 }
 
 .select2-container--default .select2-selection--multiple .select2-selection__placeholder {
-    color: #999;
+    color: color(text, placeholder);
     margin-top: 5px;
     float: left;
 }
@@ -340,6 +348,10 @@
 .select2-container--default.select2-container--disabled .select2-selection--multiple {
     background-color: #eee;
     cursor: default;
+
+    &:focus {
+        outline: none;
+    }
 }
 
 .select2-container--default.select2-container--disabled .select2-selection__choice__remove {
@@ -475,7 +487,7 @@
 }
 
 .select2-container--classic .select2-selection--single .select2-selection__placeholder {
-    color: #999;
+    color: color(text, placeholder);
 }
 
 .select2-container--classic .select2-selection--single .select2-selection__arrow {
