--- a/views/lexicon/patterns/filters/create-filter.html.twig
+++ b/views/lexicon/patterns/filters/create-filter.html.twig
@@ -108,7 +108,7 @@
             form.end({
                 'actions': [
                     form.submit({
-                        'label': 'Save',
+                        'label': 'Apply Filter',
                         'class': 'btn--primary'
                     }),
                     html.link({
